# Rifqah

./: .env.example  .gitignore  GEMINI.md  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  go.mod  go.sum
backend/cmd/api/: main.go
backend/internal/auth/: auth.go
backend/internal/ball/: ball.go  ball_test.go
backend/internal/db/: db.go
backend/internal/media/: media.go
backend/internal/models/: models.go
backend/internal/room/: ratings.go  room.go  room_test.go
backend/internal/testutils/: redis.go
backend/internal/ws/: moderation_test.go  ws.go  ws_test.go
docs/: DESIGN.md
infrastructure/: livekit.yaml
infrastructure/db/: schema.sql
mobile/: ffigen.yaml  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/cpp/: CMakeLists.txt
mobile/assets/: .env.prod
mobile/cpp/include/: audio_engine.h
mobile/cpp/src/: audio_engine.cpp
mobile/lib/: main.dart
mobile/lib/components/auth/: auth_entry_screen.dart  guest_dashboard_screen.dart  initial_welcome_screen.dart  unauthenticated_discovery_screen.dart
mobile/lib/components/meeting/: create_meeting_screen.dart  meeting_room_screen.dart  participant_orb.dart  tap_to_talk_button.dart
mobile/lib/components/shared/: app_theme.dart
mobile/lib/config/: env_config.dart
mobile/lib/controllers/: audio_controller.dart  audio_engine_bindings.dart  room_controller.dart
scripts/: generate_keys.dart
